responsive mobile for header (still need to fix)

--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ footer .footer {
   margin-bottom: 26px;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1024px) and (min-width: 376px) {
   header {
     height: 647px;
     width: 1024px;
@@ -554,5 +554,58 @@ footer .footer {
   }
   footer .footer__copyright {
     margin-right: 60px;
+  }
+}
+@media (max-width: 375px) {
+  header {
+    height: 601px;
+    width: 375px;
+    background: radial-gradient(118.67% 101.66% at 141.47% 78.12%, #ffffff 0%, rgba(255, 255, 255, 0) 100%);
+  }
+  header nav .nav__link:link {
+    display: none;
+  }
+  header .button {
+    display: inline-block !important;
+  }
+  header .header__intro {
+    font-weight: 800;
+    font-size: 42px;
+    line-height: 58px;
+    top: 137px;
+    left: 20px;
+    text-align: center;
+    width: 335px;
+    height: 160px;
+  }
+  header .header__description {
+    font-size: 12px;
+    line-height: 23px;
+    text-align: center;
+    width: 335px;
+    height: 87px;
+    top: 327px;
+    left: 20px;
+  }
+  header form {
+    left: 20px;
+    top: 457px;
+  }
+  header form .header__input {
+    padding: 15px 20px;
+    width: 335px;
+    height: 60px;
+  }
+  header form .header__input::-moz-placeholder {
+    font-size: 14px;
+  }
+  header form .header__input::placeholder {
+    font-size: 14px;
+  }
+  header form .header__input--button {
+    font-size: 14px;
+    line-height: 19px;
+    padding: 15px 18px;
+    margin-left: -94.46px;
   }
 }/*# sourceMappingURL=style.css.map */
