--- a/style.css
+++ b/style.css
@@ -608,4 +608,21 @@ footer .footer {
     padding: 15px 18px;
     margin-left: -94.46px;
   }
+  .section1 {
+    width: 375px;
+    margin-bottom: 100px;
+  }
+  .section1 .article__introduction .article__introduction--title {
+    font-size: 24px;
+    line-height: 33px;
+    margin-top: 60px;
+    height: 31px;
+  }
+  .section1 .article__introduction .article__introduction--description {
+    font-size: 12px;
+    line-height: 22px;
+    margin-top: 15px;
+    width: 334px;
+    height: 109px;
+  }
 }/*# sourceMappingURL=style.css.map */
