--- a/style.scss
+++ b/style.scss
@@ -702,4 +702,26 @@ footer {
       }
     }
   }
+
+  .section1 {
+    width: 375px;
+    margin-bottom: 100px;
+
+    .article__introduction {
+      .article__introduction--title {
+        font-size: 24px;
+        line-height: 33px;
+        margin-top: 60px;
+        height: 31px;
+      }
+
+      .article__introduction--description {
+        font-size: 12px;
+        line-height: 22px;
+        margin-top: 15px;
+        width: 334px;
+        height: 109px;
+      }
+    }
+  }
 }
