--- a/style.css
+++ b/style.css
@@ -611,6 +611,7 @@ footer .footer {
   .section1 {
     width: 375px;
     margin-bottom: 100px;
+    text-align: center;
   }
   .section1 .article__introduction .article__introduction--title {
     font-size: 24px;
@@ -624,5 +625,28 @@ footer .footer {
     margin-top: 15px;
     width: 334px;
     height: 109px;
+  }
+  .section1 .article__detail {
+    display: block;
+    margin: 0px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 100px;
+  }
+  .section1 .article__detail .article__detail--box {
+    margin-top: 90px;
+    width: 100%;
+  }
+  .section1 .article__detail .file-icon-box {
+    margin-top: 40px;
+  }
+  .section2 {
+    width: 375px;
+    padding: 50px 0px;
+  }
+  .section2 .section2__header {
+    font-size: 36px;
+    line-height: 47px;
+    margin-bottom: 9px;
   }
 }/*# sourceMappingURL=style.css.map */
