--- a/style.scss
+++ b/style.scss
@@ -795,4 +795,54 @@ footer {
       }
     }
   }
+
+  .section3 {
+    width: 375px;
+    padding: 92px 16px;
+    padding-bottom: 0px;
+
+    .blog-title {
+      text-align: center;
+      font-size: 36px;
+      line-height: 41.5px;
+      margin-bottom: 20px;
+    }
+
+    .blog-description {
+      text-align: center;
+      font-size: 14px;
+      line-height: 28.5px;
+      width: 340.97px;
+      margin-bottom: 40px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px auto;
+    }
+
+    img {
+      display: block;
+      width: 343px;
+      height: 320px;
+      margin-bottom: 30px;
+    }
+
+    .section3__blog1,
+    .section3__blog2 {
+      display: block;
+    }
+
+    .section3__blog1 {
+      margin-bottom: 55px;
+    }
+
+    .section3__blog2 {
+      margin-bottom: 70px;
+    }
+
+    .display1440 {
+      display: none;
+    }
+  }
 }
