--- a/style.scss
+++ b/style.scss
@@ -301,6 +301,10 @@ header {
   .display1024 {
     display: none;
   }
+
+  .display375 {
+    display: none;
+  }
 }
 
 .section4 {
@@ -606,6 +610,10 @@ footer {
     .display1440 {
       display: none;
     }
+
+    .display375 {
+      display: none;
+    }
   }
 
   .section4 {
@@ -844,6 +852,14 @@ footer {
 
     .display1440 {
       display: none;
+    }
+
+    .display10241044 {
+      display: none;
+    }
+
+    .display375 {
+      display: block;
     }
   }
 }
