--- a/style.css
+++ b/style.css
@@ -736,4 +736,59 @@ footer .footer {
   .section3 .display375 {
     display: block;
   }
+  .section4 {
+    width: 375px;
+    padding: 0px;
+    overflow: hidden;
+    padding-bottom: 40px;
+    overflow: hidden;
+  }
+  .section4 .section4__title {
+    font-size: 36px;
+    line-height: 41.5px;
+    font-weight: 700;
+    margin-top: 40px;
+    margin-bottom: 14px;
+  }
+  .section4 .section4__description {
+    font-size: 14px;
+    margin-bottom: 40px;
+  }
+  .section4 .logo-container {
+    width: 100%;
+    height: 696px;
+    margin: 0px auto;
+    display: block;
+    overflow: hidden;
+  }
+  .section4 .logo-container img {
+    display: block;
+    width: 170px;
+    height: 96px;
+    margin: 0px auto;
+    margin-bottom: 24px;
+  }
+  .section4 .logo-container .column,
+  .section4 .logo-container .column__1,
+  .section4 .logo-container .column__2,
+  .section4 .logo-container .column__3 {
+    padding: 0px;
+    width: 100%;
+    height: 0px;
+    display: block;
+    margin-bottom: 24px;
+  }
+  .section4 .logo-container .column__1 {
+    height: 96px;
+  }
+  .section4 .logo-container .column__2 {
+    height: 216px;
+  }
+  .section4 .logo-container .column__3 {
+    height: 336px;
+  }
+  .section4 .logo-container .column__4,
+  .section4 .logo-container .column__5 {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
