--- a/style.scss
+++ b/style.scss
@@ -862,4 +862,69 @@ footer {
       display: block;
     }
   }
+
+  .section4 {
+    width: 375px;
+    padding: 0px;
+    overflow: hidden;
+    padding-bottom: 40px;
+    overflow: hidden;
+
+    .section4__title {
+      font-size: 36px;
+      line-height: 41.5px;
+      font-weight: 700;
+      margin-top: 40px;
+      margin-bottom: 14px;
+    }
+
+    .section4__description {
+      font-size: 14px;
+      margin-bottom: 40px;
+    }
+
+    .logo-container {
+      width: 100%;
+      height: 696px;
+      margin: 0px auto;
+      display: block;
+      overflow: hidden;
+
+      img {
+        display: block;
+        width: 170px;
+        height: 96px;
+        margin: 0px auto;
+        margin-bottom: 24px;
+      }
+
+      .column,
+      .column__1,
+      .column__2,
+      .column__3 {
+        padding: 0px;
+        width: 100%;
+        height: 0px;
+        display: block;
+        margin-bottom: 24px;
+      }
+
+      .column__1 {
+        height: 96px;
+      }
+
+      .column__2 {
+        height: 216px;
+      }
+
+      .column__3 {
+        height: 336px;
+      }
+
+      .column__4,
+      .column__5 {
+        display: none;
+      }
+    }
+  }
 }
