--- a/style.scss
+++ b/style.scss
@@ -984,7 +984,25 @@ footer {
 
     .footer {
       display: block;
-      // margin-bottom: 90px;
+      div {
+        img {
+          width: 32px;
+          height: 32px;
+        }
+      }
+    }
+
+    .footer__copyright {
+      display: grid;
+      row-gap: 65px;
+
+      p {
+        order: 2;
+      }
+
+      div {
+        order: 1;
+      }
     }
   }
 }
